# gazebo_plugins

collision_map_creator_plugin/: CMakeCache.txt  Makefile  cmake_install.cmake  request_publisher
collision_map_creator_plugin/.hg/: dirstate  hgrc  undo.desc
collision_map_creator_plugin/.hg/cache/: branch2-served  rbc-names-v1  rbc-revs-v1
collision_map_creator_plugin/.hg/store/: 00changelog.i  00manifest.i  undo
collision_map_creator_plugin/.hg/store/data/: collision__map__creator.cc.i  request__publisher.cc.i
collision_map_creator_plugin/msgs/: Makefile  cmake_install.cmake
simulation_walk/: CMakeLists.txt  package.xml
simulation_walk/launch/: simulate.launch  simulate.launch~
simulation_walk/msg/: CostMap.msg  Laser4.msg
simulation_walk/src/: ddpg.py  training_data_publisher.py
walking_person_plugin/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  debug  package.xml
walking_person_plugin/include/: ActorPlugin.hh  ActorPluginCurved.hh  TrajectoryActorPlugin.hh  oldTrajectoryActorPlugin.hh
walking_person_plugin/src/: 3  ActorPlugin.cc  ActorPluginCurved.cc  TrajectoryActorPlugin.cc  oldTrajectoryActorPlugin.cc
walking_person_plugin/world/: cafe.world  corridor.world  costmap.yaml  empty.world  map.yaml  walking.world  walking_map.world  walking_map.yaml  walking_map_plain.world  willowgarage.world
world_reset_plugin/: CMakeLists.txt  package.xml
world_reset_plugin/src/: WorldResetPlugin.cc
